# sinabs

./: CMakeLists.txt  Features.md  NGBS.md  TODO.md  build.ngbs  build_example.ngbs
example/: build.ngbs
modules/: cpp_module.chaiscript  cpp_module.ngbs
modules/core/: core_module.ngbs
modules/cpp/: cpp_module.ngbs  executable_generator.chai  include_directories.ngbs  object_generator.chai  shared_library_generator.chai  static_library_generator.chai
modules/native/: big_object.ngbs  native_module.ngbs  position_independent_code.ngbs  preprocessor_definitions.ngbs
src/: CMakeLists.txt  NGBS.cxx
src/Graph/: CMakeLists.txt  Graph.cxx  Graph.hxx  GraphBuilder.cxx  GraphBuilder.hxx  ModuleBuilder.cxx  ModuleBuilder.hxx  Node.cxx  Node.hxx  ProjectBuilder.cxx  ProjectBuilder.hxx  ScriptEngine.cxx  ScriptEngine.hxx
src/Graph/Module/: Arity.cxx  Arity.hxx  CMakeLists.txt  InlineTarget.cxx  InlineTarget.hxx  Module.cxx  Module.hxx  ModuleItem.cxx  ModuleItem.hxx  PropertyType.cxx  PropertyType.hxx  TargetType.cxx  TargetType.hxx
src/Graph/Project/: CMakeLists.txt  Project.cxx  Project.hxx  Property.cxx  Property.hxx  Target.cxx  Target.hxx
src/Utils/: CMakeLists.txt  TypeTraits.hxx
